@@ -232,8 +232,9 @@
 #' @importFrom IRanges CharacterList IntegerList
 #' @importFrom S4Vectors DataFrame
 #' @noRd
-.parse_taxonomy <- function(taxa_tab, sep = "; |;", column_name = "Taxon",
-                            removeTaxaPrefixes = FALSE, ...) {
+.parse_taxonomy <- function(
+    taxa_tab, sep = "; |;", column_name = "Taxon", removeTaxaPrefixes = FALSE,
+    returned.ranks = TAXONOMY_RANKS, ...) {
     ############################### Input check ################################
     # Check sep
     if(!.is_non_empty_string(sep)){
@@ -253,8 +254,9 @@
     ############################## Input check end #############################
     
     #  work with any combination of taxonomic ranks available
-    all_ranks <- c("Kingdom","Phylum","Class","Order","Family","Genus","Species")
-    all_prefixes <- c("k__", "p__", "c__", "o__", "f__", "g__", "s__")
+    all_ranks <- c(
+      "Kingdom","Phylum","Class","Order","Family","Genus","Species", "Strain")
+    all_prefixes <- c("k__", "p__", "c__", "o__", "f__", "g__", "s__", "t__")
     
     # split the taxa strings
     taxa_split <- CharacterList(strsplit(taxa_tab[, column_name],sep))
@@ -267,7 +269,7 @@
     if(removeTaxaPrefixes){
       taxa_split <- lapply(taxa_split,
                            gsub,
-                           pattern = "([kpcofgs]+)__",
+                           pattern = "([kpcofgst]+)__",
                            replacement = "")
       taxa_split <- CharacterList(taxa_split)
     }
@@ -281,7 +283,13 @@
     taxa_tab <- DataFrame(as.matrix(taxa_split))
     colnames(taxa_tab) <- all_ranks
     
-    taxa_tab
+    # Subset columns so that it includes TAXONOMY_RANKS columns by default.
+    # If strain column has values, it it also returned.
+    ind <- !(!tolower(colnames(taxa_tab)) %in% tolower(returned.ranks) &
+        colSums(is.na(taxa_tab)) == nrow(taxa_tab))
+    taxa_tab <- taxa_tab[ , ind, drop = FALSE]
+    
+    return(taxa_tab)
 }
 
 ################################################################################
